--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="wearables.jasonsalas.com.wearablemessagingdemo" >
 
     <uses-feature android:name="android.hardware.type.watch" />
+	<uses-permission android:name="android.permission.VIBRATE" />
 
     <application android:allowBackup="true" android:icon="@drawable/fitbit" android:label="@string/app_name">
 
